# self_driving_wheelchair_seniordesign2

./: .gitignore  README.md  frames_2026-03-16_16.11.26.gv
matlab/: model_save.m  model_x_vL.mat  model_x_vR.mat  model_y_vL.mat  model_y_vR.mat  x_only_iddata.mat  y_only_iddata.mat  y_voltage_to_velocity.m
matlab/LUT/: lookup_table_angular.csv  lookup_table_angular.mat
matlab/lookup_sid_pid/: build_iddata.m  make_angular_lookup_table_from_csv.m  make_lookup_table_from_csv.m
matlab/model_simulation/: sim_combined.m  sim_pid.m  sim_x_only.m  sim_y_only.m
matlab/models/: model_x_vL.mat  model_x_vR.mat  model_y_vL.mat  model_y_vR.mat  x_model_L.mat  x_model_R.mat  y_model_L.mat  y_model_R.mat
matlab/pid/: simulate_y_pid_closed_loop.m
matlab/systemid_data/: Mimo.m  cmd_vel_combined_iddata.mat  linear_iddata.m  pid_sim_with_models.m  wheel_models_iddata.mat  wheelchair_iddata_gui.mat  wheelchair_mimo_iddata.mat  x_voltage_vl_vr_iddata.m  y_voltage_vl_vr_iddata.m
ros2_ws/src/cmdvel_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/cmdvel_bridge/cmdvel_bridge/: cmd_vel_script.py  cmd_vel_to_serial.py  roboclaw_wheel_bridge.py
ros2_ws/src/encoder_bridge/: package.xml  setup.py
ros2_ws/src/encoder_bridge/encoder_bridge/: encoder_odom_bridge.py
ros2_ws/src/imu_bridge/: package.xml  setup.py
ros2_ws/src/imu_bridge/imu_bridge/: imu_serial_node.py
ros2_ws/src/imu_bridge/launch/: imu_serial.launch.py
ros2_ws/src/ldrobot-lidar-ros2/ldlidar_node/params/: ldlidar.yaml
ros2_ws/src/navigation/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/config/: ekf.yaml  nav2_mppi_wheelchair.yaml  nav2_params.yaml  nav_to_pose_no_spin_backup.xml
ros2_ws/src/navigation/launch/: localization.launch.py  navigation.launch.py  navigation_mppi.launch.py
ros2_ws/src/navigation/slam_config/: slam_toolbox.yaml
ros2_ws/src/slope_layer/: package.xml  setup.cfg  setup.py
ros2_ws/src/slope_layer/slope_layer/: slope_costmap_node.py
ros2_ws/src/uwb_follower/: package.xml  setup.cfg  setup.py
ros2_ws/src/uwb_follower/resource/: uwb_follower
ros2_ws/src/uwb_follower/uwb_follower/: uwb_follower.py
ros2_ws/src/uwb_uart_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/uwb_uart_driver/uwb_uart_driver/: uwb_uart_node.py
ros2_ws/src/wheelchair_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/wheelchair_bringup/config/: ldlidar.yaml  ldlidar_slam.yaml  sensor_bridge.yaml  twist_mux.yaml  wheel_odom.yaml  xbox_teleop.yaml
ros2_ws/src/wheelchair_bringup/include/wheelchair_bringup/: sensor_bridge.hpp  wheel_odom_node.hpp
ros2_ws/src/wheelchair_bringup/launch/: joystick.launch.py  pid.launch.py  self_driving.launch.py  self_driving_mppi.launch.py
ros2_ws/src/wheelchair_bringup/msg/: EncoderStamped.msg
ros2_ws/src/wheelchair_bringup/src/: sensor_bridge.cpp  wheel_odom_node.cpp
ros2_ws/src/wheelchair_description/: CMakeLists.txt  package.xml
ros2_ws/src/wheelchair_description/config/: dimensions.yaml
ros2_ws/src/wheelchair_description/launch/: view_wheelchair.launch.py
ros2_ws/src/wheelchair_description/urdf/: wheelchair.urdf.xacro  wheelchair_ros2_control.xacro
ros2_ws/src/wheelchair_hardware/: CMakeLists.txt  package.xml
tools/: save_serial_csv.py
wheelchair_lowlevel/encoder_esp32/src/: main.cpp
wheelchair_lowlevel/esp32_sensors_bringup/include/: encoder_reader.h  um7_parser.h
wheelchair_lowlevel/esp32_sensors_bringup/src/: encoder_reader.cpp  main.cpp
wheelchair_lowlevel/find_neutral/src/: main.cpp
wheelchair_lowlevel/imu_esp32/: platformio.ini
wheelchair_lowlevel/imu_esp32/src/: main.cpp
wheelchair_lowlevel/matlab_esp32/src/: main.cpp
wheelchair_lowlevel/motor_esp32/: platformio.ini
wheelchair_lowlevel/motor_esp32/include/: drive_controller.h
wheelchair_lowlevel/motor_esp32/src/: CmdVelReceiver.cpp  CmdVelReceiver.h  EncoderReader.cpp  EncoderReader.h  Logger.cpp  Logger.h  WheelchairController.cpp  WheelchairController.h  main.cpp
wheelchair_lowlevel/motor_test/src/: main.cpp
wheelchair_lowlevel/pid_esp32/: platformio.ini
wheelchair_lowlevel/pid_esp32/src/: CmdVelReceiver.cpp  CmdVelReceiver.h  DebugConsole.cpp  DebugConsole.h  EncoderReader.cpp  LookupTable.cpp  LookupTable.h  PidController.cpp  PidController.h  SensorPublisher.cpp  SensorPublisher.h  WheelchairController.cpp  WheelchairController.h  main.cpp  um7_parser.cpp  um7_parser.h
wheelchair_lowlevel/roboclaw_esp32/: platformio.ini
wheelchair_lowlevel/roboclaw_esp32/src/: motor_esp32_roboclaw.cpp
wheelchair_lowlevel/systemid/src/: main.cpp
