<?xml version="1.0"?>
<package format="3">
	<name>slope_layer</name>
	<version>0.0.0</version>
	<description>Nav2 slope costmap layer (Python prototype)</description>

	<maintainer email="lcott39@gmail.com">LylaOtt</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<depend>rclpy</depend>
	<depend>sensor_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_sensor_msgs</depend>

	<exec_depend>sensor_msgs_py</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
